force-app/main/default/objects/SMS_Trigger_Condition__mdt/SMS_Trigger_Condition__mdt.object-meta.xml
<CustomObject>
    <label>SMS Trigger Condition</label>
    <pluralLabel>SMS Trigger Conditions</pluralLabel>
</CustomObject>