force-app/main/default/objects/SMS_Trigger_Condition__mdt/fields/Field_ApiName__c.field-meta.xml
<CustomField>
    <fullName>Field_ApiName__c</fullName>
    <label>Field ApiName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>