force-app/main/default/objects/SMS_Trigger_Condition__mdt/fields/IsUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUpdate</label>
    <type>Checkbox</type>
</CustomField>