force-app/main/default/objects/SMS_Trigger_Condition__mdt/fields/NotificationId__c.field-meta.xml
<CustomField>
    <fullName>NotificationId__c</fullName>
    <label>NotificationId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>