force-app/main/default/objects/SMS_Trigger_Condition__mdt/fields/Object_ApiName__c.field-meta.xml
<CustomField>
    <fullName>Object_ApiName__c</fullName>
    <label>Object ApiName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>