force-app/main/default/objects/SMS_Trigger_Condition__mdt/fields/Static_Value__c.field-meta.xml
<CustomField>
    <fullName>Static_Value__c</fullName>
    <description>Values:
-change
-staticValue</description>
    <label>Static Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>